--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
 VUE_APP_RECAPTCHA_KEY=6Lddc8kZAAAAACdCsXCyqH59ICqyuBedhFUIZ62k
 VUE_APP_CHATBOT_URL=http://83.212.93.155:5000
-VUE_APP_KNOWLEDGE_BASE_URL=http://localhost
+VUE_APP_KNOWLEDGE_BASE_URL=https://kb.smartzoos.eu/
