--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
-    "bootstrap-vue": "^2.17.3",
-    "core-js": "^3.6.4",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "axios": "^0.21.4",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
+    "core-js": "^3.18.0",
     "url-regex": "^5.0.0",
-    "vue": "^2.6.12",
+    "vue": "^2.6.14",
     "vue-class-component": "^7.2.6",
-    "vue-i18n": "^8.22.0",
+    "vue-i18n": "^8.25.1",
     "vue-property-decorator": "^8.5.1",
-    "vuex": "^3.5.1"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@intlify/vue-i18n-loader": "^1.0.0",
-    "@types/chai": "^4.2.13",
+    "@intlify/vue-i18n-loader": "^1.1.0",
+    "@types/chai": "^4.2.22",
     "@types/mocha": "^5.2.4",
-    "@types/webpack": "^4.41.22",
+    "@types/webpack": "^4.41.31",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -40,17 +40,17 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.1.0",
     "@vue/test-utils": "1.0.0-beta.31",
-    "chai": "^4.1.2",
+    "chai": "^4.3.4",
     "chromedriver": "81",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-vue": "^6.2.2",
-    "geckodriver": "^1.20.0",
+    "geckodriver": "^1.22.3",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
-    "typescript": "~4.0.0",
+    "typescript": "^4.0.8",
     "vue-cli-plugin-i18n": "~1.0.1",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.14"
   }
 }
