--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "@vue/eslint-config-typescript": "^5.1.0",
     "@vue/test-utils": "1.0.0-beta.31",
     "chai": "^4.3.4",
-    "chromedriver": "81",
+    "chromedriver": "^93.0.1",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-vue": "^6.2.2",
-    "geckodriver": "^1.22.3",
+    "geckodriver": "^2.0.4",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
