--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@types/url-regex-safe": "^1.0.0",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.18.0",
-    "url-regex": "^5.0.0",
+    "url-regex-safe": "^2.0.2",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.6",
     "vue-i18n": "^8.25.1",
